PLAT-4440: updated to java 17 and bumped versions